side-nav: fixed a bug where outline has been cut off

--- a/component-library/src/app/components/side-nav/side-nav.component.scss
+++ b/component-library/src/app/components/side-nav/side-nav.component.scss
@@ -32,13 +32,16 @@ $footer-height: 310px;
   .sidenav-section-wrapper {
     background: var(--surface1);
 
+    @include grid.up-laptop-layout {
+      padding: 0 6px;
+    }
+
     &.fixed {
       @include grid.up-laptop-layout {
         position: fixed;
         top: 0;
         height: 100vh;
         overflow-y: auto;
-        padding: 0 8px;
       }
     }
 
